# NeuroFusion-Reactor

./: CMakeLists.txt  README.md  camera.h  imgui.ini  magnetic_field.h  main.cpp  particle.cpp  particle.frag  particle.h  particle.vert  plasma_physics.h  ray_tracing.cpp  tokamak_geometry.h  tokamak_raytrace.comp
build-3d/: imgui.ini  tokamak_raytrace.comp
build-root/: build.ninja  particle.frag
neurofusion-reactor/: README.md  app.js  index.html  progress.md  styles.css
